--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -101,8 +101,8 @@ html[data-theme='dark'] .breadcrumbLink {
 @media (min-width: 768px) {
   /* md breakpoint */
   .sectionSpacer {
-    margin-top: 4rem; /* md:my-16 */
-    margin-bottom: 4rem; /* md:my-16 */
+    margin-top: 64px; /* md:my-16 */
+    margin-bottom: 64px; /* md:my-16 */
   }
 }
 
