--- a/src/theme/Navbar/Search/styles.module.css
+++ b/src/theme/Navbar/Search/styles.module.css
@@ -20,6 +20,8 @@
   
   .searchButton:hover {
     border-color: #d1d1d1;
+    color: var(--text-secondary)!important;
+
   }
   
   .searchIcon {
@@ -32,7 +34,7 @@
   
   .searchPlaceholder {
     flex-grow: 1;
-    color: #999999;
+    color: var(--text-tertiary)!important;
     font-size: 0.9rem;
     white-space: nowrap;
     overflow: hidden;
